--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.5",
     "imagify-fe": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
