--- a/package.json
+++ b/package.json
@@ -10,19 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.0.1",
     "@openzeppelin/contracts": "^5.2.0",
     "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "@radix-ui/themes": "^3.2.1",
+    "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.72.0",
     "cloudinary": "^2.5.1",
     "ethers": "^6.13.5",
     "imagify-fe": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
+    "react-rater": "^6.0.5",
+    "react-router-dom": "^7.5.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.3.3",
     "dotenv": "^16.4.7",
     "eslint": "^9.13.0",
