--- a/package.json
+++ b/package.json
@@ -17,18 +17,26 @@
     "@mui/material": "^7.0.1",
     "@openzeppelin/contracts": "^5.2.0",
     "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.0",
+    "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "imagify-fe": "file:",
+    "ipfs-http-client": "^60.0.1",
+    "lucide-react": "^0.501.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-rater": "^6.0.5",
     "react-router-dom": "^7.5.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
